@@ -1,3 +1,7 @@
+2008-05-05  Armin Burgmeier  <armin@openismus.com>
+
+	* examples/tablemodel/main.cc: Added missing main.cc file.
+
 2008-04-11  Armin Burgmeier  <armin@openismus.com>
 
 	* examples/tablemodel/examplewindow.h:
